Criação de gaussian_quad()

--- a/Galerkin_python.ipynb
+++ b/Galerkin_python.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "cb24599e-613d-4ab8-b333-6430febcc84d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy import integrate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "b1f73b62-72c0-4ca0-9338-a33e54e5c807",
    "metadata": {},
    "outputs": [],
@@ -27,12 +28,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
+   "id": "aed2d156-860a-49df-aaf4-247bc831a293",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gaussian_quad(func, x_inicial, x_final):\n",
+    "    def_integral = integrate.quad(func, x_inicial, x_final)[0]\n",
+    "    return def_integral"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "cb47def9-1ff0-4948-880e-80372ced4fe4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gaussian_quad(lambda x: x**3, 0,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "ba338681-5cff-4dba-b10a-e7ec76f9e4d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def galerkin_method(basis_functions, f, num_partitions):\n",
+    "def galerkin_method(basis_functions, f, x_inicial, x_final, integration_method, args):\n",
     "    n = len(basis_functions)\n",
     "    A = np.zeros((n, n))\n",
     "    l = np.zeros(n)\n",
@@ -44,14 +78,22 @@
     "    for i in range(n):\n",
     "        for j in range(n):\n",
     "            integrand = lambda x: derivative(basis_functions[i])(x) * derivative(basis_functions[j])(x)\n",
-    "            A[i, j] = trapezoidal_rule(integrand, 0, 1, num_partitions)\n",
+    "            A[i, j] = integration_method(integrand, x_inicial, x_final, args)\n",
     "        \n",
     "        integrand_l = lambda x: basis_functions[i](x) * f(x)\n",
-    "        l[i] = trapezoidal_rule(integrand_l, 0, 1, num_partitions)\n",
+    "        l[i] = integration_method(integrand_l, x_inicial, x_final, args)\n",
     "\n",
     "    coef = np.linalg.solve(A, l)\n",
     "    return coef"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71b8f857-e601-4808-b8a0-fcf0bdf32f04",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
