Modificação no método de derivação

--- a/Galerkin_python.ipynb
+++ b/Galerkin_python.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "cb24599e-613d-4ab8-b333-6430febcc84d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from scipy import integrate"
+    "from scipy import integrate\n",
+    "from scipy.misc import derivative"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "id": "b1f73b62-72c0-4ca0-9338-a33e54e5c807",
    "metadata": {},
    "outputs": [],
@@ -28,56 +29,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "id": "aed2d156-860a-49df-aaf4-247bc831a293",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gaussian_quad(func, x_inicial, x_final):\n",
+    "def gaussian_quad(func, x_inicial, x_final, args=None):\n",
     "    def_integral = integrate.quad(func, x_inicial, x_final)[0]\n",
     "    return def_integral"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "cb47def9-1ff0-4948-880e-80372ced4fe4",
+   "cell_type": "markdown",
+   "id": "d321dfa3-1803-46d6-acd3-473e605f1b47",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.25"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "gaussian_quad(lambda x: x**3, 0,1)"
+    "Preciso ajustar galerkin_method para o primeiro problema variacional da Lista."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee1c2a6d-5f2d-44d0-bf06-fc8933782340",
+   "metadata": {},
+   "source": [
+    "Sugestão: criar uma outra função para o funcional 'a' e o 'f' e utilzar dentro de galerkin_method."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "id": "ba338681-5cff-4dba-b10a-e7ec76f9e4d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def galerkin_method(basis_functions, f, x_inicial, x_final, integration_method, args):\n",
+    "def galerkin_method(basis_functions, f, x_inicial, x_final, integration_method, args=None):\n",
     "    n = len(basis_functions)\n",
     "    A = np.zeros((n, n))\n",
     "    l = np.zeros(n)\n",
     "    h = 1.0 / num_partitions\n",
     "\n",
-    "    def derivative(func):\n",
-    "        return lambda x: np.gradient(func(x), x)\n",
-    "\n",
     "    for i in range(n):\n",
     "        for j in range(n):\n",
-    "            integrand = lambda x: derivative(basis_functions[i])(x) * derivative(basis_functions[j])(x)\n",
+    "            integrand = lambda x: derivative(basis_functions[i], x, dx=1e-6) * derivative(basis_functions[j], x, dx=1e-6)\n",
     "            A[i, j] = integration_method(integrand, x_inicial, x_final, args)\n",
     "        \n",
     "        integrand_l = lambda x: basis_functions[i](x) * f(x)\n",
@@ -89,11 +82,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "71b8f857-e601-4808-b8a0-fcf0bdf32f04",
+   "execution_count": 43,
+   "id": "1d9170c8-8031-4299-8fac-5a1da569ba93",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients with Gaussian quadrature: [ 2.2158542  -0.38701841]\n",
+      "Coefficients with Trapezoidal rule: [ 2.1763078  -0.37766908]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Usuario\\AppData\\Local\\Temp\\ipykernel_14744\\2105876560.py:9: DeprecationWarning: scipy.misc.derivative is deprecated in SciPy v1.10.0; and will be completely removed in SciPy v1.12.0. You may consider using findiff: https://github.com/maroba/findiff or numdifftools: https://github.com/pbrod/numdifftools\n",
+      "  integrand = lambda x: derivative(basis_functions[i], x, dx=1e-6) * derivative(basis_functions[j], x, dx=1e-6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def basis_func_1(x):\n",
+    "    return x\n",
+    "\n",
+    "def basis_func_2(x):\n",
+    "    return x**2\n",
+    "\n",
+    "def f(x):\n",
+    "    return np.sin(x)\n",
+    "\n",
+    "basis_functions = [basis_func_1, basis_func_2]\n",
+    "x_inicial = 0\n",
+    "x_final = np.pi\n",
+    "num_partitions = 10\n",
+    "\n",
+    "# Using Gaussian quadrature\n",
+    "coef_gaussian = galerkin_method(basis_functions, f, x_inicial, x_final, gaussian_quad)\n",
+    "print(\"Coefficients with Gaussian quadrature:\", coef_gaussian)\n",
+    "\n",
+    "# Using Trapezoidal rule\n",
+    "coef_trapezoidal = galerkin_method(basis_functions, f, x_inicial, x_final, trapezoidal_rule, num_partitions)\n",
+    "print(\"Coefficients with Trapezoidal rule:\", coef_trapezoidal)"
+   ]
   }
  ],
  "metadata": {
