--- a/Galerkin_python.ipynb
+++ b/Galerkin_python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "cb24599e-613d-4ab8-b333-6430febcc84d",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "b1f73b62-72c0-4ca0-9338-a33e54e5c807",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "aed2d156-860a-49df-aaf4-247bc831a293",
    "metadata": {},
    "outputs": [],
@@ -37,6 +37,22 @@
     "def gaussian_quad(func, x_inicial, x_final, args=None):\n",
     "    def_integral = integrate.quad(func, x_inicial, x_final)[0]\n",
     "    return def_integral"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a482aab4-1a20-4ca7-9ebb-6ef3c4da91b8",
+   "metadata": {},
+   "source": [
+    "Fazer um (ou mais) Benchmarks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33519612-4606-4ace-a2aa-294612ea30c8",
+   "metadata": {},
+   "source": [
+    "derivative (deprecated) --> findiff"
    ]
   },
   {
@@ -52,12 +68,12 @@
    "id": "ee1c2a6d-5f2d-44d0-bf06-fc8933782340",
    "metadata": {},
    "source": [
-    "Sugestão: criar uma outra função para o funcional 'a' e o 'f' e utilzar dentro de galerkin_method."
+    "Sugestão: criar uma outra função para o funcional 'a' e o 'f' e utilizar dentro de galerkin_method."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "id": "ba338681-5cff-4dba-b10a-e7ec76f9e4d7",
    "metadata": {},
    "outputs": [],
@@ -70,7 +86,7 @@
     "\n",
     "    for i in range(n):\n",
     "        for j in range(n):\n",
-    "            integrand = lambda x: derivative(basis_functions[i], x, dx=1e-6) * derivative(basis_functions[j], x, dx=1e-6)\n",
+    "            integrand = lambda x: derivative(basis_functions[i], x, dx=1e-4) * derivative(basis_functions[j], x, dx=1e-4)\n",
     "            A[i, j] = integration_method(integrand, x_inicial, x_final, args)\n",
     "        \n",
     "        integrand_l = lambda x: basis_functions[i](x) * f(x)\n",
@@ -82,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "1d9170c8-8031-4299-8fac-5a1da569ba93",
    "metadata": {},
    "outputs": [
@@ -98,7 +114,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Usuario\\AppData\\Local\\Temp\\ipykernel_14744\\2105876560.py:9: DeprecationWarning: scipy.misc.derivative is deprecated in SciPy v1.10.0; and will be completely removed in SciPy v1.12.0. You may consider using findiff: https://github.com/maroba/findiff or numdifftools: https://github.com/pbrod/numdifftools\n",
+      "/tmp/ipykernel_9153/2105876560.py:9: DeprecationWarning: scipy.misc.derivative is deprecated in SciPy v1.10.0; and will be completely removed in SciPy v1.12.0. You may consider using findiff: https://github.com/maroba/findiff or numdifftools: https://github.com/pbrod/numdifftools\n",
       "  integrand = lambda x: derivative(basis_functions[i], x, dx=1e-6) * derivative(basis_functions[j], x, dx=1e-6)\n"
      ]
     }
@@ -125,6 +141,45 @@
     "# Using Trapezoidal rule\n",
     "coef_trapezoidal = galerkin_method(basis_functions, f, x_inicial, x_final, trapezoidal_rule, num_partitions)\n",
     "print(\"Coefficients with Trapezoidal rule:\", coef_trapezoidal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "87d5dbe0-80a4-4d0b-a54f-00b529daec20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "derivada_de_x = lambda x: derivative(basis_func_2,1,dx=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "913fa2a3-f066-4efe-b6b4-cc95ce806314",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_9153/842386134.py:1: DeprecationWarning: scipy.misc.derivative is deprecated in SciPy v1.10.0; and will be completely removed in SciPy v1.12.0. You may consider using findiff: https://github.com/maroba/findiff or numdifftools: https://github.com/pbrod/numdifftools\n",
+      "  derivada_de_x = lambda x: derivative(basis_func_2,1,dx=1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "derivada_de_x(1)"
    ]
   }
  ],
