--- a/Galerkin_python.ipynb
+++ b/Galerkin_python.ipynb
@@ -41,6 +41,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c71a1e78-de9d-4663-bf12-9883154cdefb",
+   "metadata": {},
+   "source": [
+    "Deixar o código array-wise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a482aab4-1a20-4ca7-9ebb-6ef3c4da91b8",
    "metadata": {},
    "source": [
