array-wise ideia for the code

--- a/Galerkin_python.ipynb
+++ b/Galerkin_python.ipynb
@@ -1,6 +1,46 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "cba5e065-8b5b-4cff-8ce5-5f0343d1930d",
+   "metadata": {},
+   "source": [
+    "## IDEIA:\n",
+    "\n",
+    "Deixar o código \"array-wise\". Isto implicaria em vária mudanças para o código:\n",
+    "\n",
+    "- Usar DiffToll para derivação de arrays;\n",
+    "- Trocar integrate.quad() para uma função que lide com arrays;\n",
+    "- Possívelmente mudar outras partes do código como em galerkin_method().\n",
+    "\n",
+    "Como isso vai dar um pouco de trabalho e exige tempo, só deixo aqui a ideia anotada em uma branch, \"array-wise\". Caso, no futuro, eu perceber que esse tipo abordagem para o código é melhor e mais flexível, trazendo menos \"dor de cabeça\", trabalharei nesta ideia."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a482aab4-1a20-4ca7-9ebb-6ef3c4da91b8",
+   "metadata": {},
+   "source": [
+    "Fazer um (ou mais) Benchmarks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d321dfa3-1803-46d6-acd3-473e605f1b47",
+   "metadata": {},
+   "source": [
+    "Preciso ajustar galerkin_method para o primeiro problema variacional da Lista."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee1c2a6d-5f2d-44d0-bf06-fc8933782340",
+   "metadata": {},
+   "source": [
+    "Sugestão: criar uma outra função para o funcional 'a' e o 'f' e utilizar dentro de galerkin_method."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "cb24599e-613d-4ab8-b333-6430febcc84d",
@@ -37,46 +77,6 @@
     "def gaussian_quad(func, x_inicial, x_final, args=None):\n",
     "    def_integral = integrate.quad(func, x_inicial, x_final)[0]\n",
     "    return def_integral"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c71a1e78-de9d-4663-bf12-9883154cdefb",
-   "metadata": {},
-   "source": [
-    "Deixar o código array-wise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a482aab4-1a20-4ca7-9ebb-6ef3c4da91b8",
-   "metadata": {},
-   "source": [
-    "Fazer um (ou mais) Benchmarks"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "33519612-4606-4ace-a2aa-294612ea30c8",
-   "metadata": {},
-   "source": [
-    "derivative (deprecated) --> findiff"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d321dfa3-1803-46d6-acd3-473e605f1b47",
-   "metadata": {},
-   "source": [
-    "Preciso ajustar galerkin_method para o primeiro problema variacional da Lista."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ee1c2a6d-5f2d-44d0-bf06-fc8933782340",
-   "metadata": {},
-   "source": [
-    "Sugestão: criar uma outra função para o funcional 'a' e o 'f' e utilizar dentro de galerkin_method."
    ]
   },
   {
