--- a/Galerkin_python.ipynb
+++ b/Galerkin_python.ipynb
@@ -1,8 +1,21 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9e30adf9-0427-4947-985e-b41280e2ca5b",
+   "metadata": {},
+   "source": [
+    "Fazer um (ou mais) Benchmarks\n",
+    "\n",
+    "Preciso ajustar galerkin_method para o primeiro problema variacional da Lista.\n",
+    "\n",
+    "Sugestão: criar uma outra função para o funcional 'a' e o 'f' e utilizar dentro de galerkin_method para mais flexibilidade."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "cb24599e-613d-4ab8-b333-6430febcc84d",
    "metadata": {},
    "outputs": [],
@@ -14,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "b1f73b62-72c0-4ca0-9338-a33e54e5c807",
    "metadata": {},
    "outputs": [],
@@ -29,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "aed2d156-860a-49df-aaf4-247bc831a293",
    "metadata": {},
    "outputs": [],
@@ -40,48 +53,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c71a1e78-de9d-4663-bf12-9883154cdefb",
-   "metadata": {},
-   "source": [
-    "Deixar o código array-wise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a482aab4-1a20-4ca7-9ebb-6ef3c4da91b8",
-   "metadata": {},
-   "source": [
-    "Fazer um (ou mais) Benchmarks"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "33519612-4606-4ace-a2aa-294612ea30c8",
-   "metadata": {},
-   "source": [
-    "derivative (deprecated) --> findiff"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d321dfa3-1803-46d6-acd3-473e605f1b47",
-   "metadata": {},
-   "source": [
-    "Preciso ajustar galerkin_method para o primeiro problema variacional da Lista."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ee1c2a6d-5f2d-44d0-bf06-fc8933782340",
-   "metadata": {},
-   "source": [
-    "Sugestão: criar uma outra função para o funcional 'a' e o 'f' e utilizar dentro de galerkin_method."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "id": "ba338681-5cff-4dba-b10a-e7ec76f9e4d7",
    "metadata": {},
    "outputs": [],
@@ -90,7 +63,6 @@
     "    n = len(basis_functions)\n",
     "    A = np.zeros((n, n))\n",
     "    l = np.zeros(n)\n",
-    "    h = 1.0 / num_partitions\n",
     "\n",
     "    for i in range(n):\n",
     "        for j in range(n):\n",
@@ -106,8 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "1d9170c8-8031-4299-8fac-5a1da569ba93",
+   "execution_count": 30,
+   "id": "93762993-1c97-4f9c-b414-b217e0ec26e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "basis_func_1 = lambda x: x\n",
+    "\n",
+    "basis_func_2 = lambda x: x**2\n",
+    "\n",
+    "f = lambda x: np.sin(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "428595fa-706a-4b4c-94fc-6d0f24696707",
    "metadata": {},
    "outputs": [
     {
@@ -122,21 +108,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_9153/2105876560.py:9: DeprecationWarning: scipy.misc.derivative is deprecated in SciPy v1.10.0; and will be completely removed in SciPy v1.12.0. You may consider using findiff: https://github.com/maroba/findiff or numdifftools: https://github.com/pbrod/numdifftools\n",
-      "  integrand = lambda x: derivative(basis_functions[i], x, dx=1e-6) * derivative(basis_functions[j], x, dx=1e-6)\n"
+      "/tmp/ipykernel_5478/2606824010.py:8: DeprecationWarning: scipy.misc.derivative is deprecated in SciPy v1.10.0; and will be completely removed in SciPy v1.12.0. You may consider using findiff: https://github.com/maroba/findiff or numdifftools: https://github.com/pbrod/numdifftools\n",
+      "  integrand = lambda x: derivative(basis_functions[i], x, dx=1e-4) * derivative(basis_functions[j], x, dx=1e-4)\n"
      ]
     }
    ],
    "source": [
-    "def basis_func_1(x):\n",
-    "    return x\n",
-    "\n",
-    "def basis_func_2(x):\n",
-    "    return x**2\n",
-    "\n",
-    "def f(x):\n",
-    "    return np.sin(x)\n",
-    "\n",
     "basis_functions = [basis_func_1, basis_func_2]\n",
     "x_inicial = 0\n",
     "x_final = np.pi\n",
