--- a/Galerkin_python.ipynb
+++ b/Galerkin_python.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "cb24599e-613d-4ab8-b333-6430febcc84d",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "b1f73b62-72c0-4ca0-9338-a33e54e5c807",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "aed2d156-860a-49df-aaf4-247bc831a293",
    "metadata": {},
    "outputs": [],
@@ -54,23 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "ba338681-5cff-4dba-b10a-e7ec76f9e4d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def galerkin_method(basis_functions, f, x_inicial, x_final, integration_method, args=None):\n",
+    "def galerkin_method(basis_functions, fonte, x_inicial, x_final, integration_method, args=None):\n",
     "    n = len(basis_functions)\n",
     "    A = np.zeros((n, n))\n",
     "    l = np.zeros(n)\n",
     "\n",
     "    for i in range(n):\n",
     "        for j in range(n):\n",
-    "            integrand = lambda x: derivative(basis_functions[i], x, dx=1e-4) * derivative(basis_functions[j], x, dx=1e-4)\n",
-    "            A[i, j] = integration_method(integrand, x_inicial, x_final, args)\n",
-    "        \n",
-    "        integrand_l = lambda x: basis_functions[i](x) * f(x)\n",
-    "        l[i] = integration_method(integrand_l, x_inicial, x_final, args)\n",
+    "            A[i, j] = funcional_incognita(basis_functions[i], basis_functions[j], integration_method, x_inicial, x_final, args)\n",
+    "            \n",
+    "        l[i] = funcional_fonte(basis_functions[i], fonte, integration_method, x_inicial, x_final, args)\n",
     "\n",
     "    coef = np.linalg.solve(A, l)\n",
     "    return coef"
@@ -78,7 +76,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
+   "id": "e3f695ae-db7a-4963-b08e-aa619ff91306",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def funcional_incognita(func1, func2, integration_method, x_inicial, x_final, args):\n",
+    "    integrand = lambda x: derivative(func1, x, dx=1e-4) * derivative(func2, x, dx=1e-4)\n",
+    "    return integration_method(integrand, x_inicial, x_final, args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "95a2169c-6af6-44c4-9f33-90e3ee0e8b66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def funcional_fonte(func, fonte, integration_method, x_inicial, x_final, args):\n",
+    "    integrand = lambda x: func(x) * fonte(x)\n",
+    "    return integration_method(integrand, x_inicial, x_final, args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "93762993-1c97-4f9c-b414-b217e0ec26e6",
    "metadata": {},
    "outputs": [],
@@ -92,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "428595fa-706a-4b4c-94fc-6d0f24696707",
    "metadata": {},
    "outputs": [
@@ -108,8 +130,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5478/2606824010.py:8: DeprecationWarning: scipy.misc.derivative is deprecated in SciPy v1.10.0; and will be completely removed in SciPy v1.12.0. You may consider using findiff: https://github.com/maroba/findiff or numdifftools: https://github.com/pbrod/numdifftools\n",
-      "  integrand = lambda x: derivative(basis_functions[i], x, dx=1e-4) * derivative(basis_functions[j], x, dx=1e-4)\n"
+      "C:\\Users\\Usuario\\AppData\\Local\\Temp\\ipykernel_5604\\751507433.py:2: DeprecationWarning: scipy.misc.derivative is deprecated in SciPy v1.10.0; and will be completely removed in SciPy v1.12.0. You may consider using findiff: https://github.com/maroba/findiff or numdifftools: https://github.com/pbrod/numdifftools\n",
+      "  integrand = lambda x: derivative(func1, x, dx=1e-4) * derivative(func2, x, dx=1e-4)\n"
      ]
     }
    ],
@@ -126,45 +148,6 @@
     "# Using Trapezoidal rule\n",
     "coef_trapezoidal = galerkin_method(basis_functions, f, x_inicial, x_final, trapezoidal_rule, num_partitions)\n",
     "print(\"Coefficients with Trapezoidal rule:\", coef_trapezoidal)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "87d5dbe0-80a4-4d0b-a54f-00b529daec20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "derivada_de_x = lambda x: derivative(basis_func_2,1,dx=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "913fa2a3-f066-4efe-b6b4-cc95ce806314",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_9153/842386134.py:1: DeprecationWarning: scipy.misc.derivative is deprecated in SciPy v1.10.0; and will be completely removed in SciPy v1.12.0. You may consider using findiff: https://github.com/maroba/findiff or numdifftools: https://github.com/pbrod/numdifftools\n",
-      "  derivada_de_x = lambda x: derivative(basis_func_2,1,dx=1)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2.0"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "derivada_de_x(1)"
    ]
   }
  ],
