funcionais como parâmetros em galerkin_method()

--- a/Galerkin_python.ipynb
+++ b/Galerkin_python.ipynb
@@ -6,16 +6,14 @@
    "id": "9e30adf9-0427-4947-985e-b41280e2ca5b",
    "metadata": {},
    "source": [
-    "Fazer um (ou mais) Benchmarks\n",
+    "Fazer um (ou mais) Benchmarks;\n",
     "\n",
-    "Preciso ajustar galerkin_method para o primeiro problema variacional da Lista.\n",
-    "\n",
-    "Sugestão: criar uma outra função para o funcional 'a' e o 'f' e utilizar dentro de galerkin_method para mais flexibilidade."
+    "Preciso criar os funcionais do primeiro problema da Lista."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "cb24599e-613d-4ab8-b333-6430febcc84d",
    "metadata": {},
    "outputs": [],
@@ -27,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "b1f73b62-72c0-4ca0-9338-a33e54e5c807",
    "metadata": {},
    "outputs": [],
@@ -42,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "aed2d156-860a-49df-aaf4-247bc831a293",
    "metadata": {},
    "outputs": [],
@@ -54,12 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "ba338681-5cff-4dba-b10a-e7ec76f9e4d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def galerkin_method(basis_functions, fonte, x_inicial, x_final, integration_method, args=None):\n",
+    "def galerkin_method(basis_functions, fonte, funcional_incognita, funcional_fonte, x_inicial, x_final, integration_method, args=None):\n",
     "    n = len(basis_functions)\n",
     "    A = np.zeros((n, n))\n",
     "    l = np.zeros(n)\n",
@@ -75,32 +73,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "e3f695ae-db7a-4963-b08e-aa619ff91306",
+   "cell_type": "markdown",
+   "id": "fd424ffd-44a3-4a7b-88d4-b665c49555fc",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def funcional_incognita(func1, func2, integration_method, x_inicial, x_final, args):\n",
-    "    integrand = lambda x: derivative(func1, x, dx=1e-4) * derivative(func2, x, dx=1e-4)\n",
-    "    return integration_method(integrand, x_inicial, x_final, args)"
+    "#### Funcionais do Problema de Poisson: $$-u^{\"}(x) = f(x), \\quad \\text{com} \\quad u(x_{inicial})=u(x_{final})=0.$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "95a2169c-6af6-44c4-9f33-90e3ee0e8b66",
+   "execution_count": 27,
+   "id": "c7602870-2860-404f-9022-2c5565a8aa23",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def funcional_fonte(func, fonte, integration_method, x_inicial, x_final, args):\n",
+    "def funcional_incognita_Poisson(func1, func2, integration_method, x_inicial, x_final, args):\n",
+    "    integrand = lambda x: derivative(func1, x, dx=1e-4) * derivative(func2, x, dx=1e-4)\n",
+    "    return integration_method(integrand, x_inicial, x_final, args)\n",
+    "\n",
+    "def funcional_fonte_Poisson(func, fonte, integration_method, x_inicial, x_final, args):\n",
     "    integrand = lambda x: func(x) * fonte(x)\n",
     "    return integration_method(integrand, x_inicial, x_final, args)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "93762993-1c97-4f9c-b414-b217e0ec26e6",
    "metadata": {},
    "outputs": [],
@@ -114,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "428595fa-706a-4b4c-94fc-6d0f24696707",
    "metadata": {},
    "outputs": [
@@ -123,14 +121,14 @@
      "output_type": "stream",
      "text": [
       "Coefficients with Gaussian quadrature: [ 2.2158542  -0.38701841]\n",
-      "Coefficients with Trapezoidal rule: [ 2.1763078  -0.37766908]\n"
+      "Coefficients with Trapezoidal rule: [ 2.2158542  -0.38701841]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Usuario\\AppData\\Local\\Temp\\ipykernel_5604\\751507433.py:2: DeprecationWarning: scipy.misc.derivative is deprecated in SciPy v1.10.0; and will be completely removed in SciPy v1.12.0. You may consider using findiff: https://github.com/maroba/findiff or numdifftools: https://github.com/pbrod/numdifftools\n",
+      "C:\\Users\\Usuario\\AppData\\Local\\Temp\\ipykernel_5604\\787635567.py:2: DeprecationWarning: scipy.misc.derivative is deprecated in SciPy v1.10.0; and will be completely removed in SciPy v1.12.0. You may consider using findiff: https://github.com/maroba/findiff or numdifftools: https://github.com/pbrod/numdifftools\n",
       "  integrand = lambda x: derivative(func1, x, dx=1e-4) * derivative(func2, x, dx=1e-4)\n"
      ]
     }
@@ -142,11 +140,11 @@
     "num_partitions = 10\n",
     "\n",
     "# Using Gaussian quadrature\n",
-    "coef_gaussian = galerkin_method(basis_functions, f, x_inicial, x_final, gaussian_quad)\n",
+    "coef_gaussian = galerkin_method(basis_functions, f, funcional_incognita_Poisson, funcional_fonte_Poisson, x_inicial, x_final, gaussian_quad)\n",
     "print(\"Coefficients with Gaussian quadrature:\", coef_gaussian)\n",
     "\n",
     "# Using Trapezoidal rule\n",
-    "coef_trapezoidal = galerkin_method(basis_functions, f, x_inicial, x_final, trapezoidal_rule, num_partitions)\n",
+    "coef_trapezoidal = galerkin_method(basis_functions, f, funcional_incognita_Poisson, funcional_fonte_Poisson, x_inicial, x_final, gaussian_quad)\n",
     "print(\"Coefficients with Trapezoidal rule:\", coef_trapezoidal)"
    ]
   }
