Inserção de parâmetro 'funcionais' em galerkin_method

--- a/Galerkin_python.ipynb
+++ b/Galerkin_python.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "cb24599e-613d-4ab8-b333-6430febcc84d",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "b1f73b62-72c0-4ca0-9338-a33e54e5c807",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "aed2d156-860a-49df-aaf4-247bc831a293",
    "metadata": {},
    "outputs": [],
@@ -52,16 +52,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "ba338681-5cff-4dba-b10a-e7ec76f9e4d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def galerkin_method(basis_functions, fonte, funcional_incognita, funcional_fonte, x_inicial, x_final, integration_method, args=None):\n",
+    "def galerkin_method(basis_functions, fonte, funcionais, x_inicial, x_final, integration_method, args=None):\n",
     "    n = len(basis_functions)\n",
     "    A = np.zeros((n, n))\n",
     "    l = np.zeros(n)\n",
     "\n",
+    "    funcional_incognita = funcionais['funcional_incognita']    \n",
+    "    funcional_fonte = funcionais['funcional_fonte']\n",
+    "    \n",
     "    for i in range(n):\n",
     "        for j in range(n):\n",
     "            A[i, j] = funcional_incognita(basis_functions[i], basis_functions[j], integration_method, x_inicial, x_final, args)\n",
@@ -82,8 +85,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "c7602870-2860-404f-9022-2c5565a8aa23",
+   "execution_count": 17,
+   "id": "a5bbdb28-bc6d-4a87-8afe-f703d0e04eeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,12 +96,14 @@
     "\n",
     "def funcional_fonte_Poisson(func, fonte, integration_method, x_inicial, x_final, args):\n",
     "    integrand = lambda x: func(x) * fonte(x)\n",
-    "    return integration_method(integrand, x_inicial, x_final, args)"
+    "    return integration_method(integrand, x_inicial, x_final, args)\n",
+    "\n",
+    "funcionais_Poisson = {'funcional_incognita': funcional_incognita_Poisson, 'funcional_fonte': funcional_fonte_Poisson}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "93762993-1c97-4f9c-b414-b217e0ec26e6",
    "metadata": {},
    "outputs": [],
@@ -112,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "428595fa-706a-4b4c-94fc-6d0f24696707",
    "metadata": {},
    "outputs": [
@@ -128,7 +133,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Usuario\\AppData\\Local\\Temp\\ipykernel_5604\\787635567.py:2: DeprecationWarning: scipy.misc.derivative is deprecated in SciPy v1.10.0; and will be completely removed in SciPy v1.12.0. You may consider using findiff: https://github.com/maroba/findiff or numdifftools: https://github.com/pbrod/numdifftools\n",
+      "/tmp/ipykernel_23650/4140186547.py:2: DeprecationWarning: scipy.misc.derivative is deprecated in SciPy v1.10.0; and will be completely removed in SciPy v1.12.0. You may consider using findiff: https://github.com/maroba/findiff or numdifftools: https://github.com/pbrod/numdifftools\n",
       "  integrand = lambda x: derivative(func1, x, dx=1e-4) * derivative(func2, x, dx=1e-4)\n"
      ]
     }
@@ -140,11 +145,13 @@
     "num_partitions = 10\n",
     "\n",
     "# Using Gaussian quadrature\n",
-    "coef_gaussian = galerkin_method(basis_functions, f, funcional_incognita_Poisson, funcional_fonte_Poisson, x_inicial, x_final, gaussian_quad)\n",
+    "coef_gaussian = galerkin_method(basis_functions, f, funcionais_Poisson, x_inicial,\n",
+    "                                x_final, gaussian_quad)\n",
     "print(\"Coefficients with Gaussian quadrature:\", coef_gaussian)\n",
     "\n",
     "# Using Trapezoidal rule\n",
-    "coef_trapezoidal = galerkin_method(basis_functions, f, funcional_incognita_Poisson, funcional_fonte_Poisson, x_inicial, x_final, gaussian_quad)\n",
+    "coef_trapezoidal = galerkin_method(basis_functions, f, funcionais_Poisson, x_inicial,\n",
+    "                                   x_final, gaussian_quad)\n",
     "print(\"Coefficients with Trapezoidal rule:\", coef_trapezoidal)"
    ]
   }
