Criaçao de linear_combination_function()

--- a/Galerkin_python.ipynb
+++ b/Galerkin_python.ipynb
@@ -1,31 +1,44 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "9e30adf9-0427-4947-985e-b41280e2ca5b",
-   "metadata": {},
-   "source": [
-    "Fazer um (ou mais) Benchmarks;\n",
-    "\n",
-    "Preciso criar os funcionais do primeiro problema da Lista."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "cb24599e-613d-4ab8-b333-6430febcc84d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy import integrate\n",
-    "from scipy.misc import derivative"
+    "from scipy.misc import derivative\n",
+    "import warnings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
+   "id": "dc443901-fad8-4083-abd8-86034eea12c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "bc99e754-10b5-45b1-8700-3b5cfbc726d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear_combination_function(coefficients, basis_functions):\n",
+    "    def combined_function(x):\n",
+    "        return sum(c * f(x) for c, f in zip(coefficients, basis_functions))\n",
+    "    return combined_function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "b1f73b62-72c0-4ca0-9338-a33e54e5c807",
    "metadata": {},
    "outputs": [],
@@ -40,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "aed2d156-860a-49df-aaf4-247bc831a293",
    "metadata": {},
    "outputs": [],
@@ -52,15 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "id": "ba338681-5cff-4dba-b10a-e7ec76f9e4d7",
    "metadata": {},
    "outputs": [],
    "source": [
     "def galerkin_method(basis_functions, fonte, funcionais, x_inicial, x_final, integration_method, args=None):\n",
+    "    #args = num_partitions caso integration_method == trapezoidal_rule]\n",
     "    n = len(basis_functions)\n",
     "    A = np.zeros((n, n))\n",
-    "    l = np.zeros(n)\n",
+    "    l = np.zeros(n) \n",
     "\n",
     "    funcional_incognita = funcionais['funcional_incognita']    \n",
     "    funcional_fonte = funcionais['funcional_fonte']\n",
@@ -80,12 +94,12 @@
    "id": "fd424ffd-44a3-4a7b-88d4-b665c49555fc",
    "metadata": {},
    "source": [
-    "#### Funcionais do Problema de Poisson: $$-u^{\"}(x) = f(x), \\quad \\text{com} \\quad u(x_{inicial})=u(x_{final})=0.$$"
+    "## Poisson: $$-u^{\"}(x) = f(x), \\quad \\text{com} \\quad u(x_{inicial})=u(x_{final})=0.$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "a5bbdb28-bc6d-4a87-8afe-f703d0e04eeb",
    "metadata": {},
    "outputs": [],
@@ -103,56 +117,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "93762993-1c97-4f9c-b414-b217e0ec26e6",
+   "execution_count": 59,
+   "id": "6c55e314-dcd4-4ed0-a4b9-9c1b2aadbfce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.00000115e+00,  4.40088816e-07, -1.09137987e-13])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "basis_func_1 = lambda x: x\n",
+    "basis_func_1 = lambda x: np.sin(np.pi * x) / (np.pi)**2 \n",
     "\n",
-    "basis_func_2 = lambda x: x**2\n",
+    "basis_func_2 = lambda x: x*(x-1)\n",
     "\n",
-    "f = lambda x: np.sin(x)"
+    "basis_func_3 = lambda x: x*(x-1)**2\n",
+    "\n",
+    "basis_func_4 = lambda x: (x**2)*(x-1)\n",
+    "\n",
+    "f = lambda x: np.sin(np.pi * x)\n",
+    "\n",
+    "basis_functions = [basis_func_1, basis_func_2, basis_func_3]\n",
+    "x_inicial = 0\n",
+    "x_final = 1\n",
+    "num_partitions = 100\n",
+    "\n",
+    "coef_gaussian = galerkin_method(basis_functions, f, funcionais_Poisson, x_inicial,\n",
+    "                                x_final, gaussian_quad)\n",
+    "coef_gaussian"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "428595fa-706a-4b4c-94fc-6d0f24696707",
+   "execution_count": 82,
+   "id": "4d68a8ee-f88f-4c28-b6c2-93ee169ca2f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solucao = linear_combination_function(coef_gaussian, basis_functions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "16fe0e85-5fce-46ad-b94e-e88327590238",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coefficients with Gaussian quadrature: [ 2.2158542  -0.38701841]\n",
-      "Coefficients with Trapezoidal rule: [ 2.2158542  -0.38701841]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_23650/4140186547.py:2: DeprecationWarning: scipy.misc.derivative is deprecated in SciPy v1.10.0; and will be completely removed in SciPy v1.12.0. You may consider using findiff: https://github.com/maroba/findiff or numdifftools: https://github.com/pbrod/numdifftools\n",
-      "  integrand = lambda x: derivative(func1, x, dx=1e-4) * derivative(func2, x, dx=1e-4)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([0.00000000e+00, 3.21471108e-03, 6.42618531e-03, 9.63118900e-03,\n",
+       "       1.28264950e-02, 1.60088858e-02, 1.91751571e-02, 2.23221208e-02,\n",
+       "       2.54466080e-02, 2.85454727e-02, 3.16155946e-02, 3.46538823e-02,\n",
+       "       3.76572765e-02, 4.06227531e-02, 4.35473260e-02, 4.64280505e-02,\n",
+       "       4.92620260e-02, 5.20463988e-02, 5.47783653e-02, 5.74551746e-02,\n",
+       "       6.00741315e-02, 6.26325989e-02, 6.51280005e-02, 6.75578238e-02,\n",
+       "       6.99196221e-02, 7.22110173e-02, 7.44297021e-02, 7.65734425e-02,\n",
+       "       7.86400799e-02, 8.06275334e-02, 8.25338019e-02, 8.43569658e-02,\n",
+       "       8.60951894e-02, 8.77467224e-02, 8.93099019e-02, 9.07831539e-02,\n",
+       "       9.21649949e-02, 9.34540336e-02, 9.46489720e-02, 9.57486069e-02,\n",
+       "       9.67518310e-02, 9.76576342e-02, 9.84651045e-02, 9.91734287e-02,\n",
+       "       9.97818936e-02, 1.00289887e-01, 1.00696896e-01, 1.01002513e-01,\n",
+       "       1.01206428e-01, 1.01308437e-01, 1.01308437e-01, 1.01206428e-01,\n",
+       "       1.01002513e-01, 1.00696896e-01, 1.00289887e-01, 9.97818936e-02,\n",
+       "       9.91734287e-02, 9.84651045e-02, 9.76576342e-02, 9.67518310e-02,\n",
+       "       9.57486069e-02, 9.46489720e-02, 9.34540336e-02, 9.21649949e-02,\n",
+       "       9.07831539e-02, 8.93099019e-02, 8.77467224e-02, 8.60951894e-02,\n",
+       "       8.43569658e-02, 8.25338019e-02, 8.06275334e-02, 7.86400799e-02,\n",
+       "       7.65734425e-02, 7.44297021e-02, 7.22110173e-02, 6.99196221e-02,\n",
+       "       6.75578238e-02, 6.51280005e-02, 6.26325989e-02, 6.00741315e-02,\n",
+       "       5.74551746e-02, 5.47783653e-02, 5.20463988e-02, 4.92620260e-02,\n",
+       "       4.64280505e-02, 4.35473260e-02, 4.06227531e-02, 3.76572765e-02,\n",
+       "       3.46538823e-02, 3.16155946e-02, 2.85454727e-02, 2.54466080e-02,\n",
+       "       2.23221208e-02, 1.91751571e-02, 1.60088858e-02, 1.28264950e-02,\n",
+       "       9.63118900e-03, 6.42618531e-03, 3.21471108e-03, 1.24082806e-17])"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "basis_functions = [basis_func_1, basis_func_2]\n",
-    "x_inicial = 0\n",
-    "x_final = np.pi\n",
-    "num_partitions = 10\n",
-    "\n",
-    "# Using Gaussian quadrature\n",
-    "coef_gaussian = galerkin_method(basis_functions, f, funcionais_Poisson, x_inicial,\n",
-    "                                x_final, gaussian_quad)\n",
-    "print(\"Coefficients with Gaussian quadrature:\", coef_gaussian)\n",
-    "\n",
-    "# Using Trapezoidal rule\n",
-    "coef_trapezoidal = galerkin_method(basis_functions, f, funcionais_Poisson, x_inicial,\n",
-    "                                   x_final, gaussian_quad)\n",
-    "print(\"Coefficients with Trapezoidal rule:\", coef_trapezoidal)"
+    "solucao(np.linspace(0,1,100))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9e30adf9-0427-4947-985e-b41280e2ca5b",
+   "metadata": {},
+   "source": [
+    "Preciso criar os funcionais do primeiro problema da Lista."
    ]
   }
  ],
